--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JavaProApp.NoActionBar"
         android:usesCleartextTraffic="true"
+        tools:replace="android:label"
         tools:targetApi="31">
         <!-- quiz -->
         <activity
@@ -31,7 +32,7 @@
         <activity
             android:name=".ui.lecture.LectureSlideViewActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".ui.lecture.LectureRangeSelectionActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"/>
         <activity
