--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,15 @@
         tools:replace="android:label"
         tools:targetApi="31">
         <activity
-            android:name=".ui.TopicDetailsActivity"
-            android:parentActivityName=".ui.MainActivity"
+            android:name=".ui.RegisterActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.TopicDetailsActivity"
+            android:exported="false"
+            android:parentActivityName=".ui.MainActivity" />
         <activity
             android:name=".ui.SettingsActivity"
             android:exported="false" />
