--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,8 @@ dependencies {
 
     //image
     implementation 'com.github.MikeOrtiz:TouchImageView:1.4.1'
+
+    //codes
+    //implementation 'com.github.kbiakov:CodeView-Android:1.3.2'
+
 }
