--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
         tools:replace="android:label"
         tools:targetApi="31">
         <activity
+            android:name=".ui.SectionCodesDetailsActivity"
+            android:parentActivityName=".ui.TopicDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.RegisterActivity"
             android:exported="false" />
         <activity
