--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/java_logo"
+        android:label="@string/app_name_short"
         android:supportsRtl="true"
         android:theme="@style/Theme.JavaProApp"
         android:usesCleartextTraffic="true"
