Layout refactor and other small improvements

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.topic.quiz.answer.AnswerActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.stats.StatsActivity"
             android:exported="false" />
         <activity
