--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,9 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.topic.quiz.question.QuestionActivity"
-            android:exported="false"
-            android:parentActivityName=".ui.topic.quiz.QuizActivity" />
+            android:theme="@style/Theme.JavaProApp.NoActionBar"
+            android:label="@string/label_test"
+            android:exported="false" />
         <activity
             android:name=".ui.topic.quiz.QuizActivity"
             android:exported="false"
